[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buybox-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "SQLAlchemy>=2.0.30",
  "psycopg2-binary>=2.9.9",
  "pydantic>=2.7.4",
  "pydantic-settings>=2.3.3",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "apscheduler>=3.10.4",
  "pywebpush>=1.9.5",
  "jinja2>=3.1.4"
]

[tool.uvicorn]
factory = true
