[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repricelab-backend"
version = "0.0.2"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "psycopg2-binary>=2.9",
  "apscheduler>=3.10",
  "pywebpush>=1.9",
  "requests>=2.31.0",
  "sp-api>=0.19.0",
  "boto3>=1.34.0"
]
